[feat]: Melhora a forma com que o frotend responde a edições e corrige problema de versão do job.